Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <h1>HAPPY</h1>
 
-        <!-- Level 3 'WRITTEN BY...' Header -->
+        <h5>WRITTEN BY PHARREL WILLIAMS</h5>
 
         <!-- pararaph text 'PUBLISHED BY...' -->
 
