Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
           <h2>HAPPY</h2>
 
-          <h6>| &nbsp;&nbsp; FROM DESPICABLE ME 2 &nbsp;&nbsp; |</h6>
+          <h6>| FROM DESPICABLE ME 2 |</h6>
 
         </div>
       </div>
