--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       <div id="back" class="album">
 
-        <h4>| FROM DESPICABLE ME 2 |</h4>
+        <h4>| &nbsp;&nbsp; FROM DESPICABLE ME 2 &nbsp;&nbsp; |</h4>
 
         <h1>HAPPY</h1>
 
