--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
 
         <h6>PHARRELLWILLIAMS.COM</h6>
 
-        <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
-
+        <img 
         <!-- span text 'COLUMBIARECORDS.COM' -->
 
         <br>
