--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <h6>PHARRELLWILLIAMS.COM</h6>
 
-        <img 
+        <img src= "[columbia-logo.png]"> <img src= ""
         <!-- span text 'COLUMBIARECORDS.COM' -->
 
         <br>
